--- a/playbook.yml
+++ b/playbook.yml
@@ -1,36 +1,109 @@
-- name: Get the hostname
-  hosts: localhost
+- name: Deploy and Check GCP Service
+  hosts: my_hosts
+  gather_facts: yes
+  vars_files:
+    - main.yml
+
   tasks:
-    - name: Get the hostname
-      command: hostname
-      register: hostname_result
+    - name: Check if gcp_sys_workflows.ini exists
+      stat:
+        path: "/gcp/dev2/config/gcp_sys_workflows.ini"  # Adjust the path as needed
+      register: uwsgi_ini
 
-    - name: Initialize retry count
+    - name: Extract https port from gcp_sys_workflows.ini if it exists
+      command: awk -F'[=,]' '/https/ {for (i=1; i<=NF; i++) if ($i ~ /^[0-9]{4}/) {print substr($i, 1, 4); exit}}' /gcp/dev2/config/gcp_sys_workflows.ini
+      when: uwsgi_ini.stat.exists
+      register: uwsgi_port_https
+
+    - name: Check if nginx.conf exists
+      stat:
+        path: "/gcp/{{ deploy_lane }}/conf/nginx.conf"
+      when: not uwsgi_port_https.stdout
+      register: nginx_conf
+
+    - name: Extract port from nginx.conf if it exists
+      command: awk '/listen/ {print $2}' /gcp/{{ deploy_lane }}/conf/nginx.conf | tr -d ';'
+      when: nginx_conf.stat.exists
+      register: nginx_port
+
+    - name: Set uwsgi port fact from gcp_sys_workflows.ini (https)
       set_fact:
-        retry_count: 0
-        max_retries: 2
+        uwsgi_port: "{{ uwsgi_port_https.stdout }}"
+      when: uwsgi_ini.stat.exists and uwsgi_port_https.stdout
 
-    - name: Loop to start sys_workflows and verify health
-      include_tasks: start_sys_workflows_and_check_health.yml
-      until: health_check.status == 200 and '"status":"ok"' in health_check.content
-      retries: 2
-      delay: 30
-      ignore_errors: yes
-      vars:
-        version: "1.0"  # Replace with your version variable
-        deploy_lane: "test"  # Replace with your deploy lane variable
+    - name: Set uwsgi port fact from nginx.conf
+      set_fact:
+        uwsgi_port: "{{ nginx_port.stdout }}"
+      when: not uwsgi_port_https.stdout and nginx_conf.stat.exists
 
-    - name: Debug Start GCP SYS WORKFLOWS Version Output if failed
+    - name: Set uwsgi port fact from default if no config found
+      set_fact:
+        uwsgi_port: "{{ default_uwsgi_port }}"
+      when: not uwsgi_port_https.stdout and not nginx_conf.stat.exists
+
+    - name: Debug port selection
       debug:
-        var: results
-      when: health_check.status != 200 or '"status":"ok"' not in health_check.content
+        msg: "Selected uwsgi port is {{ uwsgi_port }}"
 
-    - name: Start GCP SYS WORKFLOWS Version Failed
-      fail:
-        msg: "Startup script failed. Error: {{ results.stderr_lines | join('\n') }}"
-      when: health_check.status != 200 or '"status":"ok"' not in health_check.content
+    - block:
+        - name: Start sys_workflows Version={{ version }}
+          shell: "./start-gcp-sys-workflows.sh --env={{ deploy_lane }}"
+          args:
+            chdir: "{{ app_bin }}"
+          register: results
+          until: results.rc == 0
+          retries: 3
+          delay: 15
 
-    - name: Check if the health check succeeded
+        - name: Wait for uwsgi to be up and running
+          wait_for:
+            port: "{{ uwsgi_port }}"
+            host: "{{ ansible_default_ipv4.address }}"
+            delay: 5
+            timeout: 30
+
+        - name: Verify uwsgi service health
+          uri:
+            url: "http://{{ ansible_default_ipv4.address }}:{{ uwsgi_port }}/health"
+            return_content: yes
+          register: health_check
+          until: health_check.status == 200 and '"status":"ok"' in health_check.content
+          retries: 5
+          delay: 10
+          ignore_errors: yes
+
+        - name: Loop for retrying restart and health check
+          until: health_check.status == 200 and '"status":"ok"' in health_check.content
+          retries: 2
+          delay: 10
+          block:
+            - name: Restart uwsgi service
+              systemd:
+                name: uwsgi
+                state: restarted
+
+            - name: Wait for uwsgi to be up and running after restart
+              wait_for:
+                port: "{{ uwsgi_port }}"
+                host: "{{ ansible_default_ipv4.address }}"
+                delay: 5
+                timeout: 30
+
+            - name: Verify uwsgi service health after restart
+              uri:
+                url: "http://{{ ansible_default_ipv4.address }}:{{ uwsgi_port }}/health"
+                return_content: yes
+              register: health_check_post_restart
+              until: health_check_post_restart.status == 200 and '"status":"ok"' in health_check_post_restart.content
+              retries: 5
+              delay: 10
+              ignore_errors: yes
+
+  rescue:
+    - name: Log health check failure
+      debug:
+        var: health_check_post_restart
+
+    - name: Fail if uwsgi health check fails after retries
       fail:
-        msg: "Health check failed after retries. Status: {{ health_check.status }}, Content: {{ health_check.content }}"
-      when: health_check.status != 200 or '"status":"ok"' not in health_check.content
+        msg: "uwsgi health check failed after retries: {{ health_check_post_restart }}"
