--- a/playbook.yml
+++ b/playbook.yml
@@ -6,13 +6,17 @@
 set -x
 
 log() {
-  echo "$1" | tee -a $STARTLOG
+  echo -e "$1" | tee -a $STARTLOG
+}
+
+log_red() {
+  echo -e "\033[31m$1\033[0m" | tee -a $STARTLOG
 }
 
 # process args
 shortopts="e:"
 longopts="environment:,env:,help"
-arguments=$(getopt -a --longoptions=$longopts --options=$shortopts -- "$@") || { echo "$0: ERROR - Invalid arguments."; exit 1; }
+arguments=$(getopt -a --longoptions=$longopts --options=$shortopts -- "$@") || { echo -e "$0: ERROR - Invalid arguments."; exit 1; }
 eval set -- "$arguments"
 while true
 do
@@ -47,14 +51,14 @@ export REQUESTS_CA_BUNDLE=/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
 
 # Exit if lock file exists
 if [[ -f $LOCK_FILE ]]; then
-  log "Another process is currently starting up. Exiting to avoid conflict."
+  log_red "Another process is currently starting up. Exiting to avoid conflict."
   exit 0
 fi
 
 # Check for existing master PID
 EXISTING_MASTER_PID=$(ps -ef | grep -i jms-${ENV}|grep uwsgi | egrep 'master|Emperor' | grep -v grep | awk '{print $2}')
 if [[ ! -z "$EXISTING_MASTER_PID" ]]; then
-  log "Master PID already exists: $EXISTING_MASTER_PID. Exiting to avoid duplicate process."
+  log_red "Master PID already exists: $EXISTING_MASTER_PID. Exiting to avoid duplicate process."
   exit 0
 fi
 
@@ -97,13 +101,13 @@ if [[ -f $GCP_PID_FILE ]]; then
     fi
   done
 
-  log "Could not find the required master or emperor PID"
+  log_red "Could not find the required master or emperor PID"
   rm -f $LOCK_FILE
   exit 1
 else
-  log "--------------------------------------------------"
-  log "COULD NOT FIND GCP PID [ $GCP_PID ]. GCP may not have started!!!"
-  log "--------------------------------------------------"
+  log_red "--------------------------------------------------"
+  log_red "COULD NOT FIND GCP PID [ $GCP_PID ]. GCP may not have started!!!"
+  log_red "--------------------------------------------------"
   rm -f $LOCK_FILE
   exit 1
 fi
